--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-/* @font-face {
-  font-family: font;
-  src: url(font.ttf);
-}
+/* 
 
 font{
     color: #fff;
@@ -14,6 +11,10 @@ a{
     text-decoration: none;
     color: #0f0;
 } */
+@font-face {
+  font-family: font;
+  src: url(foot.otf);
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
 
@@ -42,7 +43,7 @@ html {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: font;
   font-size: 1.6rem;
   font-weight: 400;
   background-color: #fff;
@@ -836,7 +837,7 @@ form h2{
 }
 
 .form input,.form textarea{
-font-family: 'Poppins', sans-serif;
+font-family: font;
 font-size: 1.6rem;
 padding: 1rem 0;
 text-indent: 1rem;
